# SpaceProject_TavukPilav

./: CMakeLists.txt  ProjectDescription.md  main.cpp
inc/Event/: AbandonedPlanetEvent.h  AsteroidBeltEvent.h  Event.h  SpaceEventManager.h  SpacePiratesEvent.h
inc/Manager/: EventGenerator.h  StoryTeller.h
inc/Ship/: CosmicWind.h  RockBreaker.h  SpaceShip.h  SpeedOfLight.h
src/Event/: AbandonedPlanetEvent.cpp  AsteroidBeltEvent.cpp  SpaceEventManager.cpp  SpacePiratesEvent.cpp
src/Manager/: EventGenerator.cpp  StoryTeller.cpp
src/Ship/: CosmicWind.cpp  RockBreaker.cpp  SpaceShip.cpp  SpeedOfLight.cpp
